src/components/Catalog/Catalog.module.css
.catalogWrapper {
  display: flex;
  flex-direction: column;
  padding-bottom: 124px;
  padding-top: 84px;
  align-items: center;
}

.ulWrapper {
  list-style: none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 32px;
  row-gap: 48px;
  padding: 0;
  margin: 0 auto;
  justify-content: center;
}

.liBox {
  border: none;
  padding: 0;
}

.img {
  width: 100%;
  max-width: 276px;
  height: 268px;
  border-radius: 10px;
  object-fit: cover;
}

.btn {
  width: 100%;
  height: 44px;
  border: none;
  border-radius: 8px;
  background-color: #3470ff;
  color: #fff;
  font-size: 16px;
  margin-top: 28px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.3s ease;
}

.btn:hover,
.btn:focus {
  color: #fff;
  background-color: #0b44cd;
  transform: translateY(-2px);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.titleBox {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-top: 16px;
  padding-bottom: 8px;
  padding-right: 12px;
}

.title {
  font-size: 16px;
  font-weight: 500;
  color: #101828;
  margin: 0;
}

.blueTitle {
  color: #3470ff;
  margin: 0;
}

.grayText {
  font-size: 12px;
  color: gray;
  margin: 0;
  padding: 0;
}

.grayTextBox {
  display: flex;
  flex-direction: column;
  gap: 4px;
  align-items: flex-start;
}

.imgBox {
  width: 276px;
  height: 268px;
  position: relative;
}

@media (max-width: 992px) {
  .catalogWrapper {
    padding-bottom: 100px;
    padding-top: 64px;
  }
}

@media (max-width: 768px) {
  .catalogWrapper {
    padding-bottom: 80px;
    padding-top: 44px;
  }
}

